# gepa-polyglot

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-build.yml  publish-crate.yml  publish-npm.yml
gepa_rpc/: adapter.py  cli.py  conversions.py  server.py  servicer.py
scripts/: compile_proto.sh
sdk/rust/: Cargo.toml  build.rs
sdk/rust/examples/: basic.rs
sdk/rust/proto/: gepa.proto
sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: basic.ts
sdk/typescript/scripts/: sync-proto.sh
sdk/typescript/src/: client.ts  index.ts  types.ts
