[package]
name = "gepa-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust client SDK for the GEPA optimization server"
license = "MIT"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
